refactor: improve app navigator design

--- a/src/app/(main)/page.styles.scss
+++ b/src/app/(main)/page.styles.scss
@@ -2,11 +2,15 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  width: 100vw;
-  height: 100vh;
-
+  width: 100dvw;
+  height: 100dvh;
+  min-height: -webkit-fill-available;
+  
   .main-content {
     flex: 1;
-    background-color: #eee;
+    background-image: url("../../assets/backgrounds/gradient-background.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
   }
 }
