--- a/src/app/(main)/components/AppNavigator/index.styles.scss
+++ b/src/app/(main)/components/AppNavigator/index.styles.scss
@@ -4,7 +4,12 @@
   display: flex;
   align-self: center;
   column-gap: var(--space-md);
-  background-color: #ddd;
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
   padding: var(--space-md) var(--space-lg);
   border-radius: 16px;
   z-index: 100;
@@ -27,6 +32,7 @@
     background-color: #ccc;
     z-index: 2;
     touch-action: none;
+    filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.2));
 
     .app-icon {
       pointer-events: none;
@@ -40,4 +46,3 @@
     }
   }
 }
-
