--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,6 +1,14 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  /* Colors */
+  --grey-100: #f5f5f5;
+  --grey-200: #e0e0e0;
+  --grey-300: #bdbdbd;
+  --grey-400: #9e9e9e;
+  --grey-500: #757575;
+  --grey-600: #616161;
+  --grey-700: #424242;
+  --grey-800: #212121;
+  --grey-900: #171717;
 
   /* Spacing variables */
   --space-sm: 4px;
