--- a/src/app/(main)/components/AppNavigator/index.styles.scss
+++ b/src/app/(main)/components/AppNavigator/index.styles.scss
@@ -1,6 +1,6 @@
 .app-navigator {
   position: absolute;
-  bottom: var(--space-lg);
+  bottom: var(--space-xl);
   display: flex;
   align-self: center;
   column-gap: var(--space-md);
@@ -10,7 +10,7 @@
   -webkit-backdrop-filter: blur(8px);
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
-  padding: var(--space-md) var(--space-lg);
+  padding: var(--space-md) var(--space-xl);
   border-radius: 16px;
   z-index: 100;
 
