--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -13,8 +13,9 @@
   /* Spacing variables */
   --space-sm: 4px;
   --space-md: 8px;
-  --space-lg: 16px;
-  --space-xl: 32px;
+  --space-lg: 12px;
+  --space-xl: 16px;
+  --space-2xl: 24px;
 }
 
 html,
